--- a/twingate-pagerduty.service
+++ b/twingate-pagerduty.service
@@ -5,7 +5,7 @@ After=network-online.target
 [Service]
 Type=simple
 ExecStart=/usr/bin/twingate-pagerduty.sh
+EnvironmentFile=/etc/twingate/twingate-pagerduty.conf
 
 [Install]
 WantedBy=multi-user.target
-
